# embroidery-agent

./: .gitignore  Cargo.toml  Dockerfile  README.md  app.py  build.rs  docker-compose.yml  pyproject.toml  requirements.txt
proto/: embroidery.proto
python/embroidery_agent/: __init__.py  agent.py  audit_certifier.py  hnsw_index.py  image_processor.py  pattern_generator.py  stitch_planner.py  style_fingerprint.py
python/embroidery_agent/fl/: __init__.py  aggregation.py  client.py
python/tests/: test_embodied_fl_integration.py  test_embroidery_agent.py
src/: audit.rs  fed_server.rs  grpc_service.rs  hnsw_index.rs  lib.rs  main.rs  rest_api.rs  vector_db.rs  web_dashboard.rs
tests/: test_embroidery_agent.py  test_rust_modules.py
web/: app.py
