[package]
name = "embroidery-agent"
version = "0.2.0"
edition = "2021"
description = "Embroidery stitch auto-generation agent — Rust backend with gRPC, HNSW, and audit chain"

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
rusqlite = { version = "0.31", features = ["bundled"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
hnsw = "0.12"
space = "0.17"
rand = "0.8"

[build-dependencies]
tonic-build = "0.12"
