[project]
name = "embroidery-agent"
version = "0.1.0"
description = "Embroidery stitch auto-generation Agent system MVP"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "Pillow>=10.0",
    "pyembroidery>=1.5",
    "svgwrite>=1.4",
]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
pythonpath = ["python"]
